welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: ';' expected but ',' found.
		for(j <- 1 to y){c=c+1;ecritMessage(c),setPos(i,j)}
                                                      ^ColumnByColumn:15: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:18: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:21: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:24: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:27: error: Unmatched closing brace '}' ignored here
}
^